--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "email": "michael.weinrich@internations.org"
         }
     ],
-    "require-dev": {
+    "require": {
         "squizlabs/php_codesniffer": "1.4.4"
     }
 }
