--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     ],
     "require": {
         "squizlabs/php_codesniffer": "1.4.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.*"
     }
 }
