--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 before_script:
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install --dev
-  - find vendor/phpunit/ -name "build" -exec rm -rf {} \;
+  - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
   - ./vendor/bin/phpcs --standard=ruleset.xml ./src/
