--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ php:
   - 5.5
 
 before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install --dev
+  - composer install --dev
   - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
