--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,9 @@ php:
   - 5.5
 
 before_script:
-  - composer install --dev
+  - composer install
   - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
   - ./vendor/bin/phpcs --standard=ruleset.xml ./src/
   - phpunit
-
-notifications:
-  email:
-    - lars.strojny@internations.org
-    - max.beutel@internations.org
-    - marc.jakubowski@internations.org
-    - michael.weinrich@internations.org
-    - vitor.balocco@internations.org
