--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "squizlabs/php_codesniffer": "1.4.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.*"
+        "phpunit/phpunit": "~4"
     }
 }
