--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "squizlabs/php_codesniffer": "1.4.4"
+        "squizlabs/php_codesniffer": "~1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
