--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: php
 php:
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: 5.6
 
 before_script:
   - composer install
