--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_script:
   - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
-  - ./vendor/bin/phpcs --standard=ruleset.xml ./src/
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ; then ./vendor/bin/phpcs --standard=ruleset.xml ./src/ ; fi'
   - phpunit
