--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -26,5 +26,6 @@
 
     <php>
         <ini name="error_reporting" value="-1"/>
+        <ini name="date.timezone" value="UTC"/>
     </php>
 </phpunit>
