--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4",
         "squizlabs/php_codesniffer": "~1"
     },
     "require-dev": {
