--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": "~7",
         "squizlabs/php_codesniffer": "~2"
     },
     "require-dev": {
