--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~6"
+    },
+    "autoload": {
+        "psr-4": {
+            "InterNations\\": "src/InterNations"
+        }
     }
 }
