--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": "~7.1",
         "squizlabs/php_codesniffer": "~2",
-        "doctrine/annotations": "^1.4"
+        "doctrine/annotations": "^1.4",
+        "roave/better-reflection": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~6"
@@ -27,6 +28,11 @@
     "autoload": {
         "psr-4": {
             "InterNations\\": "src/InterNations"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "InterNations\\Tests\\": "tests/InterNations/Tests"
         }
     }
 }
