--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ before_script:
   - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ; then ./vendor/bin/phpcs --standard=ruleset.xml ./src/ ; fi'
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ; then ./vendor/bin/phpcs --standard=ruleset.xml ./src/InterNations/Sniffs ; fi'
   - phpunit
