--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
          convertWarningsToExceptions="true"
          convertNoticesToExceptions="true"
          mapTestClassNameToCoveredClassName="true"
-         bootstrap="vendor/autoload.php"
+         bootstrap="vendor/squizlabs/php_codesniffer/tests/bootstrap.php"
          strict="true"
          verbose="true"
          colors="true"
