--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "~7.1",
-        "squizlabs/php_codesniffer": "~3",
+        "squizlabs/php_codesniffer": "^3.2.1",
         "doctrine/annotations": "^1.4"
     },
     "require-dev": {
