--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ matrix:
 
 before_script:
   - composer install
-  - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ; then ./vendor/bin/phpcs --standard=ruleset.xml ./src/InterNations/Sniffs ; fi'
-  - phpunit
+  - ./vendor/bin/phpcs --standard=ruleset.xml ./src/InterNations/Sniffs
+  - ./vendor/bin/phpunit
