--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
   - nightly
-  - hhvm
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: nightly
 
 before_script:
   - composer install
