--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,16 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
   - nightly
-  - hhvm
 
 matrix:
   allow_failures:
-    - php: hhvm
+    - php: nightly
 
 before_script:
   - composer install
-  - find vendor/phpunit/ -name "build" -exec rm -rf {} \; || true
 
 script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ; then ./vendor/bin/phpcs --standard=ruleset.xml ./src/InterNations/Sniffs ; fi'
-  - phpunit
+  - ./vendor/bin/phpcs --standard=ruleset.xml ./src/InterNations/Sniffs
+  - ./vendor/bin/phpunit
