--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "~7.4",
+        "php": ">=7.4.0",
         "squizlabs/php_codesniffer": "^3.3",
         "doctrine/annotations": "^1.4"
     },
