--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     ],
     "require": {
-        "php": "~7.4",
+        "php": ">=7.4.0",
         "squizlabs/php_codesniffer": "^3.3",
         "doctrine/annotations": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6"
+        "phpunit/phpunit": "~9"
     },
     "autoload": {
         "psr-4": {
